# itte-shogi

./: .gitignore  README.md  pyproject.toml
examples/: README.md  TUTORIAL.md  demo.py  example_puzzles.json  run_all_examples.py
shogi_mate1/: __init__.py
shogi_mate1/cli/: main.py
shogi_mate1/core/: __init__.py  attack.py  board.py  move.py  movegen.py  pieces.py  rules.py
shogi_mate1/puzzles/: __init__.py  storage.py
shogi_mate1/solver/: __init__.py  mate1.py
tests/: __init__.py  test_board.py  test_mate1.py  test_pieces.py  test_puzzle_storage.py
